force-app/main/default/objects/Conversion_Tracker__c/Conversion_Tracker__c.object-meta.xml
<CustomObject>
    <label>Conversion Tracker</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversion Tracker</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>