force-app/main/default/objects/Conversion_Tracker__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conversion Tracker (Account Name)</relationshipLabel>
    <relationshipName>Conversion_Tracker1</relationshipName>
    <type>Lookup</type>
</CustomField>