force-app/main/default/objects/Conversion_Tracker__c/fields/Comments_Help_Needed__c.field-meta.xml
<CustomField>
    <fullName>Comments_Help_Needed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments / Help Needed</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>