force-app/main/default/objects/Conversion_Tracker__c/fields/Conversion_Change__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Change__c</fullName>
    <label>Conversion % Change</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>