force-app/main/default/objects/Conversion_Tracker__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <label>Last Quarter Conversion Rate</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>