force-app/main/default/objects/Conversion_Tracker__c/fields/Conversion_Unit_Change__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Unit_Change__c</fullName>
    <label>Conversion Unit Change</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>