force-app/main/default/objects/Conversion_Tracker__c/fields/Conversion_Unit_Change_Formula__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Unit_Change_Formula__c</fullName>
    <formula>IF(
  (Conversion_Unit_Change__c) &gt; 0,
  image(&quot;/servlet/servlet.FileDownload?file=015V0000000ITzK&quot;,&quot;UP&quot;),
  IF(
    (Conversion_Unit_Change__c) = 0,
    image(&quot;/servlet/servlet.FileDownload?file=015V0000000ITzU&quot;,&quot;PARTIALLY Converted&quot;),
    image(&quot;/servlet/servlet.FileDownload?file=015V0000000ITzP&quot;,&quot;Down&quot;)))  &amp; &quot; &quot; &amp;
TEXT(Conversion_Unit_Change__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Unit Change</label>
    <type>Text</type>
</CustomField>