force-app/main/default/objects/Conversion_Tracker__c/fields/Cumulative_Conversion_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Conversion_Run_Rate__c</fullName>
    <label>Cumulative Conversion Run Rate</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>