force-app/main/default/objects/Conversion_Tracker__c/fields/Customer_Global_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Global_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Global ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>