force-app/main/default/objects/Conversion_Tracker__c/fields/Feb_ZB_Units__c.field-meta.xml
<CustomField>
    <fullName>Feb_ZB_Units__c</fullName>
    <label>Feb ZB Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>