force-app/main/default/objects/Conversion_Tracker__c/fields/Jan_ZB_Units__c.field-meta.xml
<CustomField>
    <fullName>Jan_ZB_Units__c</fullName>
    <label>Jan ZB Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>