force-app/main/default/objects/Conversion_Tracker__c/fields/Last_Quarter_Combo__c.field-meta.xml
<CustomField>
    <fullName>Last_Quarter_Combo__c</fullName>
    <label>Last Quarter Combo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>