force-app/main/default/objects/Conversion_Tracker__c/fields/Last_Quarter_Palacos__c.field-meta.xml
<CustomField>
    <fullName>Last_Quarter_Palacos__c</fullName>
    <label>Last Quarter Palacos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>