force-app/main/default/objects/Conversion_Tracker__c/fields/Last_Quarter_Tested__c.field-meta.xml
<CustomField>
    <fullName>Last_Quarter_Tested__c</fullName>
    <label>Last Quarter Tested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>