force-app/main/default/objects/Conversion_Tracker__c/fields/Lost_to_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor__c</fullName>
    <label>Lost to Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heraeus</fullName>
            </value>
            <value>
                <fullName>DJO</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Smith &amp; Nephew</fullName>
            </value>
            <value>
                <fullName>Teknimed</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>