force-app/main/default/objects/Conversion_Tracker__c/fields/On_Contract__c.field-meta.xml
<CustomField>
    <fullName>On_Contract__c</fullName>
    <label>On Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>OFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>