force-app/main/default/objects/Conversion_Tracker__c/fields/Predicted_Full_Conversion_date__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Full_Conversion_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Predicted/Completed Conversion date</label>
    <type>Date</type>
</CustomField>