force-app/main/default/objects/Conversion_Tracker__c/fields/Q1_Conversion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Q1_Conversion_Percentage__c</fullName>
    <label>Q1 Conversion Percentage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>