force-app/main/default/objects/Conversion_Tracker__c/fields/Q4_Conversion_Status__c.field-meta.xml
<CustomField>
    <fullName>Q4_Conversion_Status__c</fullName>
    <label>Q4 Conversion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Partially Converted</fullName>
            </value>
            <value>
                <fullName>Not Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>