force-app/main/default/objects/Conversion_Tracker__c/fields/Territory_Conversion_Rating__c.field-meta.xml
<CustomField>
    <fullName>Territory_Conversion_Rating__c</fullName>
    <label>Territory Conversion Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conversion Completed</fullName>
            </value>
            <value>
                <fullName>Conversion in Process</fullName>
            </value>
            <value>
                <fullName>Conversion Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>