force-app/main/default/objects/Conversion_Tracker__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conversion Tracker</relationshipLabel>
    <relationshipName>Conversion_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>