force-app/main/default/objects/Conversion_Tracker__c/fields/Tested__c.field-meta.xml
<CustomField>
    <fullName>Tested__c</fullName>
    <label>Current Year Tested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>