force-app/main/default/objects/Conversion_Tracker__c/fields/This_Quarter_Estimated_ZB_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>This_Quarter_Estimated_ZB_Run_Rate__c</fullName>
    <label>This Quarter Estimated ZB Run Rate</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>