force-app/main/default/objects/Conversion_Tracker__c/fields/Vizient_Member__c.field-meta.xml
<CustomField>
    <fullName>Vizient_Member__c</fullName>
    <label>Vizient Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>