force-app/main/default/objects/Conversion_Tracker__c/listViews/Select_Orthopedics_Inc_Conversion_Tracker.listView-meta.xml
<ListView>
    <fullName>Select_Orthopedics_Inc_Conversion_Tracker</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Queue</filterScope>
    <label>Select Orthopedics, Inc.</label>
    <queue>Select_Orthopedics_Inc</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>