force-app/main/default/objects/Conversion_Tracker__c/listViews/Summit_Surgical_Conversion_Tracker.listView-meta.xml
<ListView>
    <fullName>Summit_Surgical_Conversion_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>Summit Surgical</label>
    <queue>Summit_Surgical</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>