force-app/main/default/objects/Conversion_Tracker__c/listViews/ZB_Apex_Surgical1_Conversion_Tracker.listView-meta.xml
<ListView>
    <fullName>ZB_Apex_Surgical1_Conversion_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>ZB Apex Surgical</label>
    <queue>ZB_Apex_Surgical1</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>