force-app/main/default/objects/Conversion_Tracker__c/listViews/ZB_Empire_Conversion_Tracker.listView-meta.xml
<ListView>
    <fullName>ZB_Empire_Conversion_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>ZB Empire</label>
    <queue>ZB_Empire</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>