force-app/main/default/objects/Conversion_Tracker__c/listViews/Zimmer_Biomet_Downstate_New_York_Conversion_Tracker.listView-meta.xml
<ListView>
    <fullName>Zimmer_Biomet_Downstate_New_York_Conversion_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>ZB NYC - Territory  &amp; Conversion Tracker</label>
    <queue>Zimmer_Biomet_Downstate_New_York</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>