force-app/main/default/objects/Conversion_Tracker__c/listViews/Zimmer_Biomet_Fegan_Inc_Conversion_Tracker.listView-meta.xml
<ListView>
    <fullName>Zimmer_Biomet_Fegan_Inc_Conversion_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>Premier Orthopedics, Inc.</label>
    <queue>Zimmer_Biomet_Fegan_Inc</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>