force-app/main/default/objects/Conversion_Tracker__c/listViews/Zimmer_Biomet_Mid_Ohio_Conversion_Tracker.listView-meta.xml
<ListView>
    <fullName>Zimmer_Biomet_Mid_Ohio_Conversion_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>Zimmer Biomet Mid-Ohio</label>
    <queue>Zimmer_Biomet_Mid_Ohio</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>