force-app/main/default/objects/Conversion_Tracker__c/listViews/Zimmer_Biomet_Northeast_Conversion_Tracker.listView-meta.xml
<ListView>
    <fullName>Zimmer_Biomet_Northeast_Conversion_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>ZB North Atlantic</label>
    <queue>Zimmer_Biomet_Northeast</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>